fix(carousel): overflow

--- a/themes/gb-theme/assets/styles/custom/components/_owl-carousel.scss
+++ b/themes/gb-theme/assets/styles/custom/components/_owl-carousel.scss
@@ -4,4 +4,5 @@
 
 .owl-prev, .owl-next {
   background-color: $gray !important;
+  overflow: hidden !important;
 }
